syntax = "proto3";

option csharp_namespace = "CRMDbService.Communicators";
package crmdb;

service CRMDb {
  rpc GetAllServices(EmptyRequest) returns (ServiceList) {}
  rpc AddApplication(AddApplicationReq) returns (ApplicationResponse) {}
  rpc GetAllApplications(EmptyRequest) returns (ApplicationList) {} 
  rpc GetAllTechnicalSupportCalls(EmptyRequest) returns (TechnicalSupportCallList) {}
}

message EmptyRequest {}

message ServiceList {
  repeated Service services = 1;
}
message Application {
  string applicationNumber = 1;
  int64 beginDate = 2;
  string abonentNumber = 3;
  string personalAccount = 4;
  Service service = 5;
  string equipmentType = 6;
  TechnicalSupportCall technicalSupportCall = 7;
  int64 closeDate = 8;
}
message Service {
  int64 serviceId = 1;
  string serviceName = 2;
  int64 connectionDate = 3;
  string abonentNumber = 4;
  string serviceType = 5;
  string serviceView = 6;
  string status = 7;
}
message AddServiceReq{
  string serviceName = 1;
  int64 connectionDate = 2;
  string abonentNumber = 3;
  string serviceType = 4;
  string serviceView = 5;
  string status = 6;
}
message AddApplicationReq {
  string applicationNumber = 1;
  int64 beginDate = 2;
  string abonentNumber = 3;
  string personalAccount = 4;
  AddServiceReq service = 5;
  string equipmentType = 6;
  addTechnicalSupportCallReq technicalSupportCall = 7;
  int64 closeDate = 8;
}
message addTechnicalSupportCallReq {
  int64 callDate = 1;
  string problemType = 2;
  string problemDescription = 3;
  string abonentNumber = 4;
}
message TechnicalSupportCall {
  int64 technicalSupportCallID = 1;
  int64 callDate = 2;
  string problemType = 3;
  string problemDescription = 4;
  string abonentNumber = 5;
}
message ApplicationList {
  repeated Application applications = 1;
}
message TechnicalSupportCallList {
  repeated TechnicalSupportCall technicalSupportCalls = 1;
}
message ApplicationResponse {
  bool success = 1;
  string error = 2;
}